Add visibility to tournaments
